--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
 img {
     display: none;
   }
+  $(document).ready(function(){
+      $("p").click(function(){
+          $("img").show();
+      });
+  });
